<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nasa_apod"
            android:icon="@drawable/ic_nasa_apod"
            android:title="@string/menu_nasa_apod" />
        <item
            android:id="@+id/nav_nasa_epic"
            android:icon="@drawable/ic_nasa_epic"
            android:title="@string/menu_nasa_epic" />
        <item
            android:id="@+id/nav_wiki"
            android:icon="@drawable/ic_wiki_logo"
            android:title="@string/menu_wiki" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>