<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.FragmentSettings">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_label_themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_label_themes"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/settings_group_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@+id/settings_label_themes"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_chip_theme_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_system"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_chip_theme_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_light"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_chip_theme_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_dark"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_chip_theme_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_custom"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>