<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.FragmentNasaApod">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/nasa_apod_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nasa_views_margin"
            android:layout_marginBottom="@dimen/nasa_views_margin"
            app:singleSelection="true"
            app:checkedChip="@+id/nasa_apod_chip_today"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/nasa_apod_chip_today"
                style="@style/nasa_chip_choice"
                android:text="@string/nasa_apod_chip_today" />

            <com.google.android.material.chip.Chip
                android:id="@+id/nasa_apod_chip_week_ago"
                style="@style/nasa_chip_choice"
                android:text="@string/nasa_apod_chip_week_ago" />

            <com.google.android.material.chip.Chip
                android:id="@+id/nasa_apod_chip_month_ago"
                style="@style/nasa_chip_choice"
                android:text="@string/nasa_apod_chip_month_ago" />

            <com.google.android.material.chip.Chip
                android:id="@+id/nasa_apod_chip_year_ago"
                style="@style/nasa_chip_choice"
                android:text="@string/nasa_apod_chip_year_ago" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/nasa_apod_progress_indicator"
            style="@style/Widget.MaterialComponents.LinearProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nasa_apod_progress_content_description"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/nasa_apod_chip_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/nasa_apod_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/nasa_apod_image_content_description"
            android:layout_marginTop="@dimen/nasa_views_margin"
            app:layout_constraintTop_toBottomOf="@+id/nasa_apod_progress_indicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/fragment_nasa_apod_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>