<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_note"
    android:layout_marginStart="@dimen/margin_note"
    android:layout_marginTop="@dimen/margin_note"
    android:layout_marginBottom="@dimen/margin_note"

    tools:backgroundTint="@android:color/holo_purple">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_note_title"
            android:layout_marginStart="@dimen/margin_note_title"
            android:layout_marginTop="@dimen/margin_note_title"
            tools:text="@string/tool_note_title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtBody"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_note_body"
            android:layout_marginStart="@dimen/margin_note_body"
            android:layout_marginTop="@dimen/margin_note_body"
            tools:text="@string/tool_note_body"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDate"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_note_date"
            android:textSize="@dimen/text_size_note_date"
            android:textAlignment="textEnd"
            tools:text="@string/tool_note_date" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>