<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nasa_epic_motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_nasa_epic_page_start_scene">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/nasa_epic_progress_indicator"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nasa_apod_progress_content_description"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/nasa_epic_margin"
        android:layout_marginBottom="@dimen/nasa_epic_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/nasa_epic_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nasa_epic_image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nasa_epic_progress_indicator"
        tools:srcCompat="@drawable/ic_nasa_apod" />

    <TextView
        android:id="@+id/nasa_epic_label_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nasa_epic_margin"
        android:layout_marginTop="@dimen/nasa_epic_margin"
        android:layout_marginBottom="@dimen/nasa_epic_margin"
        android:text="@string/nasa_epic_label_caption"
        android:textSize="@dimen/nasa_epic_label_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barrier_horizontal_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nasa_epic_image_view" />

    <TextView
        android:id="@+id/nasa_epic_label_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nasa_epic_margin"
        android:layout_marginTop="@dimen/nasa_epic_margin"
        android:layout_marginBottom="@dimen/nasa_epic_margin"
        android:text="@string/nasa_epic_label_date_time"
        android:textSize="@dimen/nasa_epic_label_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/barrier_horizontal_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_horizontal_1" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="@dimen/nasa_epic_margin"
        app:constraint_referenced_ids="nasa_epic_label_time,nasa_epic_label_caption"
        tools:layout_editor_absoluteX="@dimen/nasa_epic_margin" />

    <TextView
        android:id="@+id/nasa_epic_text_caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nasa_epic_margin"
        android:layout_marginTop="@dimen/nasa_epic_margin"
        android:layout_marginEnd="@dimen/nasa_epic_margin"
        android:layout_marginBottom="@dimen/nasa_epic_margin"
        app:layout_constraintBottom_toTopOf="@+id/barrier_horizontal_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier_vertical"
        app:layout_constraintTop_toBottomOf="@+id/nasa_epic_image_view"
        tools:text="SOUZ-15 rear camera" />

    <TextView
        android:id="@+id/nasa_epic_text_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nasa_epic_margin"
        android:layout_marginTop="@dimen/nasa_epic_margin"
        android:layout_marginEnd="@dimen/nasa_epic_margin"
        android:layout_marginBottom="@dimen/nasa_epic_margin"
        app:layout_constraintBottom_toTopOf="@+id/barrier_horizontal_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier_vertical"
        app:layout_constraintTop_toBottomOf="@+id/barrier_horizontal_1"
        tools:text="19:15 21/02/2016" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="nasa_epic_text_caption,nasa_epic_label_caption"
        tools:layout_editor_absoluteY="476dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="nasa_epic_label_time,nasa_epic_text_time"
        tools:layout_editor_absoluteY="543dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show"
        android:layout_margin="@dimen/nasa_epic_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>